--- a/package.json
+++ b/package.json
@@ -3,17 +3,15 @@
     "private": true,
     "version": "0.0.0",
     "type": "module",
-    "homepage": "https://monsieur-thinh.github.io/kuma-delivery-page/",
+    "homepage": "https://github.com/monsieur-thinh/Food-Delivery/",
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "lint": "eslint .",
         "preview": "vite preview",
         "predeploy": "npm run build",
-        "deploy": "gh-pages -d build"
+        "deploy": "gh-pages -d dist"
     },
     "dependencies": {
-        "gh-pages": "^6.3.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-router-dom": "^7.2.0"
@@ -26,6 +24,7 @@
         "eslint": "^9.21.0",
         "eslint-plugin-react-hooks": "^5.1.0",
         "eslint-plugin-react-refresh": "^0.4.19",
+        "gh-pages": "^6.3.0",
         "globals": "^15.15.0",
         "vite": "^6.2.0"
     }
